ODS Logs + pom upgrades